--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,11 +53,20 @@
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
         android:id="@+id/recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="342dp"
         android:layout_marginTop="8dp"
-        tools:listitem="@layout/recyclerview_item"/>
+        tools:listitem="@layout/recyclerview_item" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="385dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center"
+        android:baselineAlignBottom="false"
+        android:clickable="true"
+        app:srcCompat="@android:drawable/ic_input_add" />
 
     <TextView
         android:id="@+id/textViewDisplayName"
