--- a/app/src/main/res/layout/dialog_update.xml
+++ b/app/src/main/res/layout/dialog_update.xml
@@ -6,21 +6,87 @@
     android:orientation="vertical"
     android:layout_margin="8dp">
 
-    <EditText
+    <TextView
+        android:id="@+id/textAlarmName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:text="Alarm Name" />
+
+    <EditText
         android:id="@+id/edit_text"
-        android:hint="Enter text"
-        android:padding="12dp"
-        android:lines="4"
+        android:layout_width="match_parent"
+        android:layout_height="41dp"
+        android:background="@android:drawable/editbox_background"
         android:gravity="top"
-        android:background="@android:drawable/editbox_background"/>
+        android:hint="Enter text"
+        android:lines="4"
+        android:padding="12dp" />
+
+    <TextView
+        android:id="@+id/textVibration"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Vibration" />
+
+    <CheckBox
+        android:id="@+id/checkBoxVibration"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="On" />
+
+    <TextView
+        android:id="@+id/textRepeat"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Repeat" />
+
+    <CheckBox
+        android:id="@+id/checkBoxSun"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Sunday" />
+
+    <CheckBox
+        android:id="@+id/checkBoxMon"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Monday" />
+
+    <CheckBox
+        android:id="@+id/checkBoxTue"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Tuesday" />
+
+    <CheckBox
+        android:id="@+id/checkBoxWed"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Wednesday" />
+
+    <CheckBox
+        android:id="@+id/checkBoxThu"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Thursday" />
+
+    <CheckBox
+        android:id="@+id/checkBoxFri"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Friday" />
+
+    <CheckBox
+        android:id="@+id/CheckBoxSat"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Saturday" />
 
     <Button
+        android:id="@+id/btn_update"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/btn_update"
-        android:text="Update"
-        android:layout_marginTop="8dp"/>
+        android:layout_marginTop="8dp"
+        android:text="Update" />
 
 </LinearLayout>
