--- a/app/src/main/res/layout/dialog_update.xml
+++ b/app/src/main/res/layout/dialog_update.xml
@@ -15,7 +15,7 @@
     <EditText
         android:id="@+id/edit_text"
         android:layout_width="match_parent"
-        android:layout_height="41dp"
+        android:layout_height="51dp"
         android:background="@android:drawable/editbox_background"
         android:gravity="top"
         android:hint="Enter text"
@@ -77,7 +77,7 @@
         android:text="Friday" />
 
     <CheckBox
-        android:id="@+id/CheckBoxSat"
+        android:id="@+id/checkBoxSat"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Saturday" />
