--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,21 +36,11 @@
             android:layout_toRightOf="@id/buttonSignOut"
             android:text="Placeholder Email" />
     </LinearLayout>
-        <EditText
-            android:id="@+id/edit_textLocation"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@android:drawable/editbox_background"
-            android:hint="Enter text"
-            android:padding="12dp"
-            android:layout_below="@id/buttonSignOut"
-            android:layout_alignParentLeft="true"/>
-
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="50dp"
-            android:layout_below="@id/edit_textLocation"
+            android:layout_below="@id/buttonSignOut"
             android:layout_alignParentLeft="true"
             android:id="@+id/buttonGroup"
             >
@@ -70,7 +60,7 @@
                 android:id="@+id/btn_add_alarm"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Add Alarm" />
+                android:text="Get Info" />
         </LinearLayout>
 
 
